# server/src/routes/routes.ts
@@ -20,5 +20,6 @@ router.post(
 router.post("/api/refresh", authController.refreshToken);
 router.get("/api/logout", authMiddleware, authController.logOut);
 router.post("/api/rooms", authMiddleware, roomsController.create);
+router.get("/api/rooms", authMiddleware, roomsController.index);
 
 export default router;
